# app/Filament/Resources/UserResource/Pages/CreateUser.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Filament\Resources\UserResource\Pages;
+
+use App\Filament\Resources\UserResource;
+use Filament\Resources\Pages\CreateRecord;
+
+class CreateUser extends CreateRecord
+{
+    protected static string $resource = UserResource::class;
+
+    protected function mutateFormDataBeforeCreate(array $data): array
+    {
+        unset($data['password_confirmation']);
+
+        return $data;
+    }
+
+    protected function afterCreate(): void
+    {
+        UserResource::logAction('user.created', $this->record);
+    }
+}
